# Asterius

./: .gitignore  Asterius.sln  Asterius.vcxproj  Asterius.vcxproj.filters  CMakeLists.txt  README.md  Syntax.xlsx
src/: BasicStructures.cpp  BasicStructures.hpp  main.cpp
src/Common/: BasicStructures.cpp  BasicStructures.h  Stack.h
src/Examples/: arithmetic.txt  arrays_dims.txt  buble.txt  err.txt  program.txt  program1.txt  scope_of_vision.txt  string.txt  sum_procedure.txt
src/LexicalAnalizer/: FiniteStateMachine.cpp  Lexer.cpp  Lexer.h  LexicalAnalizer.cpp  LexicalAnalizer.h
src/LexicalAnalyzer/: Lexer.cpp  Lexer.h  SymbolTable.cpp  SymbolTable.h  TypeInfo.cpp  TypeInfo.h
src/Program/: Program.cpp  Program.h
src/Programs/: program1.txt
src/SyntaxAnalizer/: PushdownAutomaton.cpp  PushdownAutomaton.h  SyntaxAnalizer.cpp  SyntaxAnalizer.h
src/SyntaxAnalyzer/: RPN.cpp  RPN.h  RPNStructures.cpp  RPNStructures.h  Syntax.cpp  Syntax.h  SyntaxStructure.cpp  SyntaxStructures.cpp  SyntaxStructures.h
